tests/baselines/reference/unicodeExtendedEscapesInRegularExpressions01(target=es5).errors.txt
unicodeExtendedEscapesInRegularExpressions01.ts(1,17): error TS1501: This regular expression flag is only available when targeting 'es6' or later.


==== unicodeExtendedEscapesInRegularExpressions01.ts (1 errors) ====
    var x = /\u{0}/gu;
                    ~
!!! error TS1501: This regular expression flag is only available when targeting 'es6' or later.
    